2006-05-23 Sandro Santilli <strk@refractions.net>

	* source/io/WKBWriter.cpp: fixed bug in ::writeInt
	missing to honour the requested byte order.
	* tests/unit/io/WKBReaderTest.cpp: cleaned up
	and added both XDR and NDR tests.
	* source/io/ByteOrderValues.cpp: changed
	ENDIAN_BIG and ENDIAN_LITTLE values to match
	WKBConstants::XDR and WKBConstants::NDR respectively.
	* source/headers/geos/io/WKBConstants.h: added
	comments about meaning of XDR/NDR.

2006-05-19 Sandro Santilli <strk@refractions.net>

	* source/simplify/TopologyPreservingSimplifier.cpp:
	removed friend specification in
	TopologyPreservingSimplifier helper class
	(no more needed)
	* tests/unit/geom/Geometry/coversTest.cpp:
	keep tests in 'tut' namespace.
	* tests/xmltester/XMLTester.cpp: report
	error on load of requested tests.

2006-05-18 Sandro Santilli <strk@refractions.net>

	* source/headers/geos/geom.h: fixed doxygen
	header for mainpage.
	* source/headers/geos/geom/BinaryOp.h:
	added compile-time defines to avoid 
	precision-reduction and simplify based
	policies (defaults to enabled).
	* source/geom/Geometry.cpp,
	source/headers/geos/geom/Geometry.h: added
	covers() and coveredBy() predicates.
	* tests/unit/Makefile.am,
	tests/unit/geom/Geometry/coversTest.cpp:
	added test for the new predicates.

2006-05-17 Sandro Santilli <strk@refractions.net>

	* source/geom/IntersectionMatrix.cpp,
	source/headers/geos/geom/IntersectionMatrix.h,
	tests/unit/geom/IntersectionMatrixTest.cpp:
	doxygen comments fixup; port info; const correctness;
	added isCovers() and isCoveredBy() public methods
	and associated tests.

2006-05-05 Sandro Santilli <strk@refractions.net>

	* source/noding/snapround/MCIndexSnapRounder.cpp,
	source/noding/snapround/SimpleSnapRounder.cpp:
	had noding validation failure throw an exception.
	* tests/unit/Makefile.am,
	tests/unit/noding/SegmentStringTest.cpp:
	SegmentString unit test.
	* source/headers/geos/noding/SegmentString.h,
	source/headers/geos/noding/SegmentString.inl,